<resources>
    <string name="empty"></string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="create">新建</string>
    <string name="without_content">暂无</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="menu">菜单</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="readed">已读</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="withdrawn_msg">撤 回</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="team_normal_send_message_not_allow">您已不在该讨论组，不能发送消息</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="revoke_failed">发送时间超过2分钟的消息，不能被撤回</string>
    <string name="record_audio1">按住说话</string>
    <string name="record_audio_end">松开结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑，取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="video_play">视频播放</string>
    <string name="video_record">视频录制</string>
    <string name="video_record_symbol">REC</string>
    <string name="video_record_begin">开始录制</string>
    <string name="connect_vedio_device_fail">无法连接视频设备 ，请稍候再试</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="contact_selector">联系人选择器</string>
    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="team_admin_invite">管理员邀请</string>
    <string name="team_everyone_invite">所有人邀请</string>
    <string name="team_admin_update">管理员修改</string>
    <string name="team_everyone_update">所有人修改</string>
    <string name="team_invitee_need_authen">需要验证</string>
    <string name="team_invitee_not_need_authen">不需要验证</string>
    <string name="team_nickname">群昵称</string>
    <string name="team_nickname_none">未填写</string>
    <string name="team_identity">身份</string>
    <string name="remove_member">移出本群</string>
    <string name="team_member_info">成员名片</string>
    <string name="team_admin">管理员</string>
    <string name="team_creator">群主</string>
    <string name="team_member">普通成员</string>
    <string name="team_member_switch">选择回复的人</string>
    <string name="update_success">保存成功</string>
    <string name="update_failed">保存失败, code:%d</string>
    <string name="no_permission">没有权限</string>
    <string name="set_team_admin">设为管理员</string>
    <string name="cancel_team_admin">取消管理员</string>
    <string name="team_member_remove_confirm">确定要将其移出群组么?</string>
    <string name="team_annourcement">群公告</string>
    <string name="invite_member">邀请成员</string>
    <string name="team_name">群名称</string>
    <string name="team_introduce">群介绍</string>
    <string name="team_extension">扩展示例</string>
    <string name="click_set">点击设置</string>
    <string name="create_advanced_team">创建高级群</string>
    <string name="reach_team_member_capacity">成员数量不能超过%1$d</string>
    <string name="team_authentication">身份验证</string>
    <string name="team_invite">邀请他人权限</string>
    <string name="team_info_update">群资料修改权限</string>
    <string name="team_invitee_authentication">被邀请人身份验证</string>
    <string name="create_team">创建群</string>
    <string name="over_team_member_capacity">邀请失败，成员人数上限为%1$d人</string>
    <string name="over_team_capacity">创建失败，创建群数量达到限制</string>
    <string name="create_team_failed">创建失败</string>
    <string name="create_team_success">创建成功</string>
    <string name="team_announce_title">添加标题</string>
    <string name="team_announce_content">公告内容</string>
    <string name="team_announce_notice">请输入群公告标题</string>
    <string name="team_announce_notice_content">请输入群公告正文</string>
    <string name="my_team_card">我的群名片</string>
    <string name="team_introduce_hint">点击填写群介绍</string>
    <string name="team_extension_hint">点击修改扩展内容</string>
    <string name="team_announce_hint">点击填写群公告</string>
    <string name="team_notification_config">消息提醒</string>
    <string name="team_transfer_without_member">没有可转移的群成员</string>
    <string name="team_invite_members_success">群成员邀请已发出</string>
    <string name="team_invite_members_failed">群成员邀请失败</string>
    <string name="team_transfer_success">群转移成功</string>
    <string name="team_transfer_failed">群转移失败</string>
    <string name="quit_team_success">您已退群</string>
    <string name="quit_team_failed">退群失败</string>
    <string name="quit_normal_team_success">您已经退出讨论组</string>
    <string name="quit_normal_team_failed">退出讨论组失败</string>
    <string name="dismiss_team_success">群已解散</string>
    <string name="dismiss_team_failed">解散群失败</string>
    <string name="dismiss_team">解散本群</string>
    <string name="transfer_team">转让群</string>
    <string name="quit_team">退出群</string>
    <string name="quit_normal_team">退出讨论组</string>
    <string name="team_apply_to_join">申请加入</string>
    <string name="advanced_team">高级群</string>
    <string name="advanced_team1">群聊</string>
    <string name="normal_team">讨论组</string>
    <string name="team_name_toast">群名称不能为空</string>
    <string name="not_allow_empty">不能为空</string>
    <string name="chat_setting">聊天信息</string>
    <string name="team_settings_name">修改讨论组名称</string>
    <string name="team_advance_settings_name">修改群名称</string>
    <string name="normal_team_name">讨论组名称</string>
    <string name="remove_member_success">移除成员成功</string>
    <string name="remove_member_failed">移除成员失败</string>
    <string name="invite_member_success">邀请成员成功</string>
    <string name="invite_member_failed">邀请成员失败</string>
    <string name="team_create_notice">请添加群成员</string>
    <string name="team_settings_set_name">取个名字吧</string>
    <string name="team_not_exist">该群不存在</string>
    <string name="normal_team_not_exist">该讨论组不存在</string>
    <string name="mute_msg">设置禁言</string>
    <string name="set_head_image">设置头像</string>
    <string name="select_image">选取图片</string>
    <string name="team_update_cancel">取消更新</string>
    <string name="team_update_failed">群头像设置失败</string>
    <string name="message_search_no_result">无结果</string>
    <string name="message_search_title">查看聊天内容</string>
    <string name="picker_image_preview">预览</string>
    <string name="picker_image_send">发送</string>
    <string name="picker_image_folder">相册</string>
    <string name="picker_image_album_loading">相册加载中…</string>
    <string name="picker_image_album_empty">相册中没有图片！</string>
    <string name="picker_image_folder_info">共%d张</string>
    <string name="picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="picker_image_send_select">完成（%d）</string>
    <string name="picker_image_preview_original">发送原图</string>
    <string name="picker_image_preview_original_select">发送原图（%s）</string>
    <string name="picker_image_error">获取图片出错</string>
    <string name="image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="unknow_size">未知大小</string>
    <string name="is_send_image">是否发送该原始图片？</string>
    <string name="multi_image_compressed_size">原始图片总大小为: %1$s,</string>
    <string name="is_send_multi_image">是否发送这些原始图片？</string>
    <string name="waitfor_image_local">正在打开相册，请稍候\u2026</string>
    <string name="recapture">重拍</string>
    <string name="image_show_error">图片显示异常</string>
    <string name="memory_out">内存不足</string>
    <string name="choose_from_photo_album">从手机相册选择</string>
    <string name="choose">选取</string>
    <string name="edit">编辑</string>
    <string name="crop">裁剪</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="download_picture_fail">图片下载失败</string>
    <string name="look_up_original_photo_format">查看原图（%s）</string>
    <string name="fts_enable">全文检索(FTS4)</string>
    <string name="fts_prefix_hit">前缀匹配高亮检索结果</string>
    <string name="msg_search">全文检索</string>
    <string name="msg_search_limit">全文检索显示条数</string>
    <string name="no_announcement">暂时还没有公告哦</string>
    <string name="announcement_add_content">添加正文</string>
    <string name="with">于</string>
    <string name="team_create">创建</string>
    <string name="contact_loading">加载中...</string>
    <string name="hint_contacts_search">搜索我的好友</string>
    <string name="cotacts_selected">已选择</string>
    <string name="cotacts_people">人</string>
    <string name="contacts_sure">确定</string>
    <string name="hint_team_search_name">请输入昵称搜索</string>
    <string name="my_computer">我的电脑</string>
    <string name="add_team_member_success">添加群成员成功</string>
    <string name="default_my">我</string>
    <string name="default_you">你</string>
    <string name="default_am">上午</string>
    <string name="default_pm">下午</string>
    <string name="default_hour">小时</string>
    <string name="default_min">分</string>
    <string name="default_sec">秒</string>
    <string name="default_today">今天</string>
    <string name="default_yesterday">昨天</string>
    <string name="default_before_yesterday">前天</string>
</resources>