<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textMessageLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nim_message_view_bottom">

    <FrameLayout
        android:id="@+id/switchLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px144"
        android:layout_marginLeft="@dimen/bottom_component_margin_horizontal"
        android:layout_marginRight="@dimen/bottom_component_margin_horizontal"
        android:paddingLeft="@dimen/bottom_component_margin_horizontal">

        <ImageView
            android:id="@+id/buttonAudioMessage"
            android:layout_width="@dimen/px82"
            android:layout_height="@dimen/px82"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:contentDescription="@string/empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_chat_input_voice" />

        <ImageView
            android:id="@+id/buttonTextMessage"
            android:layout_width="@dimen/px82"
            android:layout_height="@dimen/px82"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:contentDescription="@string/empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_chat_input_keyborad" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/audioTextSwitchLayout"
        android:layout_width="0dip"
        android:layout_height="@dimen/px144"
        android:layout_marginRight="@dimen/bottom_component_margin_horizontal"
        android:layout_toLeftOf="@+id/emoji_button"
        android:layout_toRightOf="@+id/switchLayout">

        <Button
            android:id="@+id/audioRecord"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px100"
            android:layout_gravity="center_vertical"
            android:background="@drawable/shape_bg_nim_input"
            android:gravity="center"
            android:text="@string/record_audio1"
            android:textColor="@color/font_gray_m"
            android:textSize="@dimen/font_44"
            android:visibility="gone" />
    </FrameLayout>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/px22"
        android:layout_marginRight="@dimen/bottom_component_margin_horizontal"
        android:layout_marginTop="@dimen/px22"
        android:layout_toLeftOf="@+id/emoji_button"
        android:layout_toRightOf="@+id/switchLayout"
        android:autoLink="web|email|phone"
        android:background="@drawable/shape_bg_nim_input"
        android:maxLines="6"
        android:minHeight="@dimen/px100"
        android:textSize="@dimen/font_52"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/emoji_button"
        android:layout_width="@dimen/px82"
        android:layout_height="@dimen/px144"
        android:layout_toLeftOf="@+id/sendLayout"
        android:background="@android:color/transparent"
        android:contentDescription="@string/empty"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_chat_input_emoji" />

    <FrameLayout
        android:id="@+id/sendLayout"
        android:layout_width="@dimen/px124"
        android:layout_height="@dimen/px144"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/bottom_component_margin_horizontal"
        android:layout_marginRight="@dimen/bottom_component_margin_horizontal">

        <ImageView
            android:id="@+id/buttonMoreFuntionInText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px82"
            android:layout_gravity="left|center_vertical"
            android:background="@android:color/white"
            android:contentDescription="@string/empty"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chat_input_more"
            android:visibility="visible" />

        <TextView
            android:id="@+id/buttonSendMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px100"
            android:layout_gravity="center"
            android:background="@drawable/shape_bg_easy_dialog_cancel"
            android:contentDescription="@string/empty"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/font_44"
            android:visibility="gone" />
    </FrameLayout>

</RelativeLayout>